[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Plan2cLasse"
version = "0.1.0"
description = "Création de plan de classe avec contraintes"
authors = [
    { name="Outerovitch" }
]
readme = "README.md"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.dependencies]
# Dépendances pour que le projet puisse fonctionner
pandas = "^2.0"
python-constraint = "^1.4"
Pillow = "^9.0"     # Pour la gestion des images

[tool.setuptools.package-data]
# Inclus les CSV dans le package
"Plan2CLasse" = ["data/liste.csv"]
